Changed styles. Now looks like the mockup

--- a/public/quest.html
+++ b/public/quest.html
@@ -183,6 +183,7 @@
 	                    </fieldset>
 	                </div> 
                 	<input value="Submit" type="submit" id="submit" />
+                	<input type="hidden" name="media_url" />
                 </form>
             </div>
         </div>
